syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
package sep3datalayer.grpc.protobuf;
option csharp_namespace = "sep3client.court";

message CreatingCourt {
  int32 centerId = 1;
  string courtType = 2;
  int32 courtNumber = 3;
  string courtSponsor = 4;
}

message CourtGrpc {
  int32 id = 1;
  int32 centerId = 2;
  string courtType = 3;
  int32 courtNumber = 4;
  string courtSponsor = 5;
}

message UpdatingCourt {
  int32 id = 1;
  string courtType = 2;
  int32 courtNumber = 3;
  string courtSponsor = 5;
}

message CourtList {
  repeated CourtGrpc court = 1;
}

message CenterId {
  int32 id = 1;
}

message CourtId {
  int32 id = 1;
}

message CourtDeletion {
  int32 centerId = 1;
  int32 courtNumber = 2;
}

service CourtService {
  rpc CreateCourt(CreatingCourt) returns (CourtGrpc);
  rpc GetCourtsFromCenterId(CenterId) returns (CourtList);
  rpc DeleteCourtFromCenterId(CourtDeletion) returns (google.protobuf.Empty);
  rpc UpdateCourt(UpdatingCourt) returns (CourtGrpc);
  rpc GetByCenterIdAndCourtNumber(CourtDeletion) returns (CourtGrpc);
  rpc GetById(CourtId) returns (CourtGrpc);
}